samples/_failures_safe/1761040727_ff987c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_18eec832.c: In function ‘main’:
./samples/SAFE/__tmp_18eec832.c:181:12: error: missing terminating " character
  181 |     printf("\nTokens:\
      |            ^~~~~~~~~~~
./samples/SAFE/__tmp_18eec832.c:181:5: error: expected expression at end of input
  181 |     printf("\nTokens:\
      |     ^~~~~~
./samples/SAFE/__tmp_18eec832.c:181:5: error: expected declaration or statement at end of input
